--- a/titulos/Modalidades/servicio.html
+++ b/titulos/Modalidades/servicio.html
@@ -241,7 +241,6 @@
                                             <li>Constancia de idioma(s)</li>
                                             <li>Revisión de estudios liberada <a href="https://ingreso.dgae.unam.mx:8020/consulta_avance_sl" target="_blank"><strong>>Consultar<</strong></a></li>
                                         </ul>
-                                        <li>Traer de manera física a la jefatura de ingeniería mecánica los <a href="https://docs.google.com/document/d/1BvurGEIHCsBNm4ZKJp4KFKgruLrMq7dX/edit?usp=drive_link&ouid=104978480045493794432&rtpof=true&sd=true" target="_blank">votos aprobatorios</a> debidamente llenados y firmados por las personas responsables.</li>
                                     </ol>
 								</div>
 							</div>
@@ -271,6 +270,16 @@
 										<li>Comprobante de <a href="https://docs.google.com/document/d/1WOxtrLLrGCsVEtd-9ciotLaDlIhkojP_/edit?usp=drive_link&ouid=104978480045493794432&rtpof=true&sd=true" target="_blank">terminación del trabajo</a> de titulación.</li>
 										<li><a href="https://drive.google.com/file/d/1iWLbmV7Um5VTX-VczK3F-i8FEljLdv6O/view" target="_blank">Protesta Universitaria de Integridad y Honestidad Académica y Profesional</a></li>
 										<li>Constancia de verificación del documento escrito emitido por la herramienta de identificación de coincidencias, una vez que se ha subido y validado la carta de término la jefatura de carrera se contactará contigo para brindar información acerca de la obtención de esta constancia.</li>
+										<li>Oficio de asignación de comité (este será emitido por la jefatura de carrera)</li>
+										<div class="alert alert-info" role="alert">
+											<p>
+												Nota:
+												<br>
+												La Jefatura de Carrera es la responsable de proponer al comité de acuerdo al área de conocimiento, antigüedad y el Artículo 20 de los <a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/cise/lineamientos-internos-titulacion.pdf" target="_blank">LITL FES Aragón</a>
+											</p>
+										</div>
+										<li>Luego de atender las observaciones, se entregará en la jefatura de carrera la carta de <a href="https://docs.google.com/document/d/1BvurGEIHCsBNm4ZKJp4KFKgruLrMq7dX/edit?usp=drive_link&ouid=104978480045493794432&rtpof=true&sd=true" target="_blank">votos aprobatorios</a>.</li>
+										<li>La Jefatura de Carrera será la encargada de programar la reunión plenaria del comité para la evaluación y dictaminación del resultado.</li>
 									</ul>
 								</div>
 							</div>
