--- a/titulos/Modalidades/articulo.html
+++ b/titulos/Modalidades/articulo.html
@@ -103,7 +103,16 @@
                 <h5>Características de la opción:</h5>
                 <p>Las personas solicitantes que se hayan incorporado a un proyecto de investigación registrado de acuerdo con el artículo 13 y tengan la constancia de la actividad de investigación de acuerdo con el artículo 14 y comprenderá de un artículo académico aceptado para su publicación en una revista arbitrada.</p>
 
-
+				<div class="alert alert-info" role="alert">
+					<p>
+						Nota:
+						<br>
+						Para el registro de esta opcion de titulacion debe de tomarse en cuenta que:
+						<ul>
+							<li><a href="https://seguimientotitulacion.unam.mx/" target="_blank">Realizar el registro de la opción de titulación durante el primer año, después  de haber cubierto la totalidad de créditos establecidos en el plan de  estudios. </a></li>
+						</ul>
+					</p>
+				</div>
                 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
@@ -154,8 +163,12 @@
 								<div class="accordion-body">
 									<ol type="I">
                                         <li>Comprobar su participación en el artículo académico aceptado para su publicación en una revista arbitrada con su autoría o coautoría, reconociendo además a quien sea responsable del proyecto de investigación.</li>
-                                        <li>Realizar el registro de la opción de titulación durante el primer año, después de haber cubierto la totalidad de créditos establecidos en el plan de estudios.</li>
+                                        <li>Realizar el registro de la opción de titulación durante el primer año, después de haber cubierto la totalidad de créditos establecidos en el plan de estudios:
+											<br>
+											<a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/investigacion-imc.pdf" target="_blank"><strong>Listado de proyectos de investigación para la opción de titulación por actividad de investigación</strong></a>
+										</li>
                                     </ol>
+									<a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Listado de personas tutoras para asesorar, supervisar y orientar el trabajo académico de titulación</strong></a>
 								</div>
 							</div>
 						</div>
@@ -181,8 +194,13 @@
 											</li>
 											<li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
 											<li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
-                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Rectificación para la persona que llevará la asesoría del trabajo</strong></a></li>
-                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/investigacion-imc.pdf" target="_blank"><strong>Proyecto de investigación registrado y aprobado previamente para tales fines por el Comité Académicos de Carrera </strong></a></li>
+											<li>Constancia de la actividad de investigación, que puede ser cualquiera de las siguientes:
+												<ul>
+													<li>Constancia directa por escrito del responsable de la investigación</li>
+													<li>Cartas de término y liberación de servicio social registrado para este fin</li>
+													<li>Constancia de realización de prácticas profesionales registradas para este fin</li>
+												</ul>
+											</li>
 											<li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
 											<br>
 											<div class="alert alert-info" role="alert">
@@ -193,15 +211,6 @@
 											debidamente llenado con la información que se le solicita en el mismo.
 										</li>
 									</ol>
-                                    <div class="alert alert-info" role="alert">
-                                        <p>Nota:
-                                            <br>
-                                            Para el registro de esta opcion de titulacion debe de tomarse en cuenta que:
-                                            <br>
-                                            Realizar el registro de la opción de titulación durante el primer año, después  de haber cubierto la totalidad de créditos establecidos en el plan de  estudios.
-                                            <a href="https://seguimientotitulacion.unam.mx/" target="_blank">>Consultar<</a>
-                                        </p>
-                                    </div>
 								</div>
 							</div>
 						</div>
