--- a/titulos/Modalidades/creditos.html
+++ b/titulos/Modalidades/creditos.html
@@ -173,7 +173,7 @@
 										<li>Enviar un correo a <strong>titulacion.mecanica@aragon.unam.mx</strong> con
 											las siguientes características:</li>
 										<p><strong>Asunto: </strong>Autorización de Titulación por medio de Totalidad de créditos y alto nivel académico</p>
-										<p><strong>Texto: </strong>Solicito autorización para la aprobación de la opción de titulación mediante “Totalidad de créditos y alto nivel académico”.
+										<p><strong>Texto: </strong>Solicito autorización para la aprobación de la opción de titulación mediante “Totalidad de créditos y alto nivel académico” (mencionar si se quiere obtener la mención honorífica).
                                             <br>
 											Por lo que anexo la siguiente documentación que corrobora el cumplimiento de los requisitos solicitados por la opción de titulación seleccionada:
 										</p>
