--- a/titulos/Modalidades/diplomado.html
+++ b/titulos/Modalidades/diplomado.html
@@ -153,6 +153,11 @@
 								data-bs-parent="#accordionFlushExample">
 								<div class="accordion-body">
 									<ul >
+										<li>La persona solicitante que elija esta opción deberá aprobar <strong>cursos o diplomados</strong> de educación continua impartidos por la UNAM y cuya duración sume al menos 240 horas.
+											Ademas el diplomado o curso deberá estar definido para este fin por el Comité Académico de Carrera.
+											<br>
+											<a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-cursos-o-diplomados.pdf" target="_blank"><strong>Listado de cursos o diplomados para la opción de titulación por ampliación y profundización de conocimientos en su alternativa de cursos o diplomados de educación continua</strong></a>
+										</li>
                                         <li>Se deberá tener autorización por parte de la Jefatura de Carrera previo al ingreso a los cursos o diplomados de educación continua.</li>
                                         <li>Para poder registrar esta opción de titulación la persona solicitante deberá aprobar los cursos o diplomados con un promedio final mínimo de 8.0 (ocho punto cero).</li>
                                     </ul>
@@ -171,8 +176,8 @@
 										<li>Enviar un correo a <strong>titulacion.mecanica@aragon.unam.mx</strong> con
 											las siguientes características:</li>
 										<p><strong>Asunto: </strong>Autorización de Titulación por medio de ampliación y profundización de conocimientos en su alternativa de cursos o diplomados de educación continua</p>
-										<p><strong>Texto: </strong>Solicito autorización para la aprobación de la opción de titulación mediante “Ampliación y profundización de conocimientos en su alternativa de cursos o diplomados de educación continua”.
-                                            <br>
+										<p><strong>Texto: </strong>Solicito autorización para realizar el registro de la opción de titulación mediante “Ampliación y profundización de conocimientos en su alternativa de cursos o diplomados de educación continua”, a través del diplomado  [escribir nombre del diplomado], que empieza el día [fecha de inicio].
+											<br>
 											Por lo que anexo la siguiente documentación que corrobora el cumplimiento de los requisitos solicitados por la opción de titulación seleccionada:
 										</p>
 										<ul>
@@ -181,7 +186,6 @@
 											</li>
 											<li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
 											<li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
-                                            <li>La persona solicitante que elija esta opción deberá aprobar <a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-cursos-o-diplomados.pdf" target="_blank"><strong>cursos o diplomados</strong></a> de educación continua impartidos por la UNAM y cuya duración sume al menos 240 horas.</li>
                                             <li><a href="https://docs.google.com/document/d/1E_BLq0_2QqqMpSB-aS5tEJ0zTaYCQcO5/edit?usp=drive_link&ouid=112811850990707264930&rtpof=true&sd=true" target="_blank"><strong>Registro de opción de titulación</strong></a> debidamente llenado con la información que se solicita en el mismo.</li>
                                             <li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
 											<br>
@@ -189,6 +193,7 @@
 												<p>Solicitarla vía correo a la Jefatura de Carrera a través del correo <strong>titulacion.mecanica@aragon.unam.mx</strong></p>
 											</div>
 										</ul>
+										<li>Traer personalmente a la Jefatura de Carrera el formato de pre registro del diplomado a cursar.</li>
 									</ol>
 								</div>
 							</div>
