--- a/titulos/Modalidades/docencia.html
+++ b/titulos/Modalidades/docencia.html
@@ -160,8 +160,12 @@
                                     data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
                                         <ul>
-                                            <li>Haber registrado, participado, terminado y liberado el programa de servicio social o prácticas profesionales establecidas para este fin ante la Jefatura de Carrera.</li>
+                                            <li>Haber registrado, participado, terminado y liberado el programa de servicio social o prácticas profesionales establecidas para este fin ante la Jefatura de Carrera.
+                                                <br>
+                                                <a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-programas.pdf" target="_blank">Listado de programas de servicio social para la opción de titulación por actividad de apoyo a la docencia</a>
+                                            </li>
                                             <li>Realizar el registro de la opción de titulación durante el primer año, después de haber cubierto la totalidad de créditos establecidos en el plan de estudios.</li>
+                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Listado de personas tutoras para asesorar, supervisar y orientar el trabajo académico de titulación</strong></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -188,7 +192,6 @@
                                                 </li>
                                                 <li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
                                                 <li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
-                                                <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Rectificación para la persona que llevará la asesoría del trabajo</strong></a></li>
                                                 <li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
                                                 <br>
                                                 <div class="alert alert-info" role="alert">
