--- a/titulos/Modalidades/investigacion.html
+++ b/titulos/Modalidades/investigacion.html
@@ -153,8 +153,14 @@
 								data-bs-parent="#accordionFlushExample">
 								<div class="accordion-body">
 									<ul>
-										<li>Haberse incorporado a un proyecto de investigación registrado para dicho fin ante la Jefatura de Carrera.</li>
-                                        <li>La persona responsable del proyecto de investigación deberá fungir como la persona tutora o a quien ésta designe por escrito y con el visto bueno de la Jefatura de Carrera.</li>
+										<li>Haberse incorporado a un proyecto de investigación registrado para dicho fin ante la Jefatura de Carrera: 
+											<br>
+											<a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/investigacion-imc.pdf" target="_blank"><strong>Proyecto de investigación registrado y aprobado previamente para tales fines por el Comité Académicos de Carrera</strong></a>
+										</li>
+                                        <li>La persona responsable del proyecto de investigación deberá fungir como la persona tutora o a quien ésta designe por escrito y con el visto bueno de la Jefatura de Carrera.
+											<br>
+											<a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Listado de personas tutoras para asesorar, supervisar y orientar el trabajo académico de titulación</strong></a>
+										</li>
                                     </ul>
 								</div>
 							</div>
@@ -181,8 +187,13 @@
 											</li>
 											<li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
 											<li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
-                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/investigacion-imc.pdf" target="_blank"><strong>Proyecto de investigación registrado y aprobado previamente para tales fines por el Comité Académicos de Carrera</strong></a></li>
-                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Rectificación para la persona que llevará la asesoría del trabajo</strong></a></li>
+											<li>Constancia de la actividad de investigación, que puede ser cualquiera de las siguientes:
+												<ul>
+													<li>Constancia directa por escrito del responsable de la investigación</li>
+													<li>Cartas de término y liberación de servicio social registrado para este fin</li>
+													<li>Constancia de realización de prácticas profesionales registradas para este fin</li>
+												</ul>
+											</li>
 											<li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
 											<br>
 											<div class="alert alert-info" role="alert">
