--- a/titulos/Modalidades/semestre.html
+++ b/titulos/Modalidades/semestre.html
@@ -177,6 +177,7 @@
 											<li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
 											<li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
                                             <li><a href="https://docs.google.com/document/d/1Ak6_A5Hyzlf6vcgSXVdy-YR7b8E5K1-9/edit?usp=drive_link&ouid=112811850990707264930&rtpof=true&sd=true" target="_blank"><strong>Registro de opción de titulación</strong></a> debidamente llenado con la información que se solicita en el mismo.</li>
+											<li>Temarios de la propuesta de asignaturas que complementen los conocimientos y capacidades de su formación.</li>
                                             <li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
 											<br>
 											<div class="alert alert-info" role="alert">
