--- a/titulos/Modalidades/servicio.html
+++ b/titulos/Modalidades/servicio.html
@@ -102,6 +102,16 @@
                 <h5>Características de la opción:</h5>
                 <p>Tesina individual sobre las actividades realizadas en dicho servicio.</p>
 
+				<div class="alert alert-info" role="alert">
+					<p>Nota:
+						<br>
+						Para el registro de esta opcion de titulacion debe de tomarse en cuenta que: 
+						<ul>
+							<li><a href="https://seguimientotitulacion.unam.mx/" target="_blank">Realizar el registro de la opción de titulación durante el primer año, después  de haber cubierto la totalidad de créditos establecidos en el plan de  estudios.</a></li>
+						</ul>
+					</p>
+				</div>
+
 
                 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -152,7 +162,10 @@
 								data-bs-parent="#accordionFlushExample">
 								<div class="accordion-body">
 									<ul>
-                                        <li>Presentar una constancia de actividades del servicio social acorde al área de conocimientos de la persona solicitante. Emitida por la persona responsable directa del servicio social, quien deberá ser profesionista y de un perfil afín.</li>
+                                        <li>Presentar una constancia de actividades del servicio social acorde al área de conocimientos de la persona solicitante. Emitida por la persona responsable directa del servicio social, quien deberá ser profesionista y de un perfil afín:
+											<br>
+											<a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Listado de personas tutoras para asesorar, supervisar y orientar el trabajo académico de titulación</strong></a>
+										</li>
                                         <li>La persona solicitante deberá realizar el registro de la opción de titulación durante el primer año, después de haber cubierto la totalidad de créditos.</li>
                                     </ul>
 								</div>
@@ -180,7 +193,7 @@
 											</li>
 											<li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
 											<li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
-                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Rectificación para la persona que llevará la asesoría del trabajo</strong></a></li>
+											<li>Constancia de actividades del servicio social acorde al área de conocimientos de la persona solicitante. Emitida por la persona responsable directa del servicio social, quien deberá ser profesionista y de un perfil afín.</li>
 											<li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
 											<br>
 											<div class="alert alert-info" role="alert">
