--- a/titulos/Modalidades/profesional.html
+++ b/titulos/Modalidades/profesional.html
@@ -156,6 +156,7 @@
                                         <li>El registro oficial de la institución empleadora ante el gobierno.</li>
                                         <li>Carta o constancia laboral oficial de la institución empleadora que reconozca la participación de la persona solicitante.</li>
                                     </ol>
+									<p><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Listado de personas tutoras para asesorar, supervisar y orientar el trabajo académico de titulación</strong></a></p>
                                     <div class="alert alert-info" role="alert">
                                         <p>Nota:
                                             <br>
@@ -187,7 +188,8 @@
 											</li>
 											<li><a href="https://cedco2.aragon.unam.mx/servsocial/" target="_blank"><strong>Constancia de liberación del Servicio Social</strong></a></li>
 											<li><a href="http://cle-aragon.unam.mx/Home/Constancias"target="_blank"><strong>Constancia de liberación del idioma Inglés</strong></a></li>
-                                            <li><a href="https://www.aragon.unam.mx/fes-aragon/public_html/documents/titulacion/mecanica/listado-de-personas-tutoras.pdf" target="_blank"><strong>Rectificación para la persona que llevará la asesoría del trabajo</strong></a></li>
+											<li>Registro oficial de la institución empleadora ante el gobierno.</li>
+											<li>Carta o constancia laboral oficial de la institución empleadora que reconozca la participación de la persona solicitante.</li>
 											<li><a href="https://www.imc-aragon.com/hfc"><strong>Constancia de Actividad de Formación Complementaria</strong></a><strong> (Plan de estudios 2021)</strong></li>
 											<br>
 											<div class="alert alert-info" role="alert">
